--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <h1>Welcome to My Live Stream</h1>
 
     <!-- Live Stream Embed -->
-<iframe width="80%" height="500" src="https://www.youtube.com/embed/YOUR_STREAM_ID" allowfullscreen></iframe>
+<iframe width="80%" height="500" src="https://www.youtube.com/live/HXSTtBn3JkM?si=77Ufd0nae9-_H4QB" allowfullscreen></iframe>
 
     <!-- Telegram Channel Button -->
     <br>
@@ -72,7 +72,7 @@
         <div class="modal-content">
             <h2>Join Our Telegram Channel</h2>
             <p>Stay updated with the latest live streams and updates.</p>
-            <a href="https://t.me/YOUR_TELEGRAM_CHANNEL" class="btn" target="_blank">Join Telegram</a>
+            <a href="https://t.me/cricfylive" class="btn" target="_blank">Join Telegram</a>
             <br>
             <button class="close-btn" onclick="closeModal()">Already Joined</button>
         </div>
