--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="modal-content">
             <h2>Join Our Telegram Channel</h2>
             <p>Stay updated with the latest live streams and updates.</p>
-            <a href="https://t.me/cricfylive" class="btn" target="_blank">Join Telegram</a>
+            <a href="https://t.me/CRICFyLive" class="btn" target="_blank">Join Telegram</a>
             <br>
             <button class="close-btn" onclick="closeModal()">Already Joined</button>
         </div>
